# minishell

./: .gitignore  Makefile  README.md  check_syntax.c  d_array_ops.c  dollar_pars.c  env_ops.c  free_ops.c  ft_spargs_split.c  ft_sprds_split.c  history.c  key_loop.c  main.c  minishell  minishell.c  minishell.h  parser.c  redir_pars.c  semi_split.c  sig_handler.c  signals.c  string_ops.c  utils.c  weakquotes_pars.c
builtins_and_execution/: cd_func.c  error_func.c  exec_func.c  exec_pipe_func.c  exec_utils.c  executor.c  exit_func.c  export_func.c  (+6 more)
vrivka/: CMakeLists.txt  Makefile  cd_func.c  check.sh  echo_func.c  env_finder.c  env_func.c  env_handler.c  envcpy.c  error_func.c  exec_func.c  exec_pipe_func.c  exec_utils.c  executor.c  exit_func.c  export_func.c  export_func_utils.c  file  frees_inits.c  key_func_rd.c  main.c  minishell.h  open_redirs.c  open_redirs_signals.c  path_finder.c  pwd_func.c  term_setup_rd.c  text_handler.c  unset_func.c
vrivka/a.out.dSYM/Contents/Resources/DWARF/: a.out
vrivka/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
vrivka/nouse/: env_list_func.c  export_func_old.c  lists.c  minishell.h
(+80 files in other folders)
